WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280543
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-flow-013.html
https://bugs.webkit.org/show_bug.cgi?id=280543
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-flow-013.html
alan
Reported
2024-09-27 14:39:13 PDT
ssia
Attachments
[fast-cq]Patch
(2.61 KB, patch)
2024-09-27 14:43 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-27 14:43:08 PDT
Created
attachment 472713
[details]
[fast-cq]Patch
EWS
Comment 2
2024-09-28 05:18:18 PDT
Committed
284413@main
(8a27e1dac8db): <
https://commits.webkit.org/284413@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472713
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-09-28 05:19:12 PDT
<
rdar://problem/136883591
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug