[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-flow-013.html https://bugs.webkit.org/show_bug.cgi?id=280543

Reviewed by Antti Koivisto.

In logical space margin-end becomes margin-start when main axis direction is reversed.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):

Canonical link: https://commits.webkit.org/284413@main